Added starter structure with text and image.

--- a/email-subscribe/index.html
+++ b/email-subscribe/index.html
@@ -8,6 +8,22 @@
   <title>TailwindCSS - Email Subscribe mini project</title>
 </head>
 <body>
+<div class="flex items-center justify-center h-screen">
+  <div class="">
+    <img src="images/image.jpg" alt="">
+    <h1>Get diet and fitness tips in your inbox</h1>
+    <p>Eat better and exercise better. Sign up for the Diet&Fitness newsletter.</p>
+    
+    <form action="">
+      <fieldset>
+        <label for="email">Enter your email address</label>
+        <input type="text" id="email" />
+      </fieldset>
+      <button>Subscribe</button>
+    </form>
+  </div>
+</div>
+
 
 </body>
 </html>
