--- a/email-subscribe/index.html
+++ b/email-subscribe/index.html
@@ -8,19 +8,26 @@
   <title>TailwindCSS - Email Subscribe mini project</title>
 </head>
 <body>
-<div class="flex items-center justify-center h-screen">
-  <div class="">
-    <img src="images/image.jpg" alt="">
-    <h1>Get diet and fitness tips in your inbox</h1>
-    <p>Eat better and exercise better. Sign up for the Diet&Fitness newsletter.</p>
-    
-    <form action="">
-      <fieldset>
-        <label for="email">Enter your email address</label>
-        <input type="text" id="email" />
-      </fieldset>
-      <button>Subscribe</button>
-    </form>
+<!-- Background Container -->
+<div class="flex items-center justify-center h-screen bg-zinc-700">
+  <!-- Card -->
+  <div class="bg-zinc-800 rounded-2xl p-2 mx-6">
+    <!-- Flex Container -->
+    <div class="flex flex-col md:flex-row rounded-l-xl">
+      <!-- Image -->
+      <img src="images/image.jpg" alt="" class="object-fit rounded-xl h-80 md:h-64 md:rounded-l-xl md:rounded-r-none transform hover:scale-105 hover:rounded-xl duration-200">
+      <!-- Content-->
+      <h1>Get diet and fitness tips in your inbox</h1>
+      <p>Eat better and exercise better. Sign up for the Diet&Fitness newsletter.</p>
+  
+      <form action="">
+        <fieldset>
+          <label for="email">Enter your email address</label>
+          <input type="text" id="email" />
+        </fieldset>
+        <button>Subscribe</button>
+      </form>
+    </div>
   </div>
 </div>
 
