--- a/email-subscribe/index.html
+++ b/email-subscribe/index.html
@@ -17,16 +17,18 @@
       <!-- Image -->
       <img src="images/image.jpg" alt="" class="object-fit rounded-xl h-80 md:h-64 md:rounded-l-xl md:rounded-r-none transform hover:scale-105 hover:rounded-xl duration-200">
       <!-- Content-->
-      <h1>Get diet and fitness tips in your inbox</h1>
-      <p>Eat better and exercise better. Sign up for the Diet&Fitness newsletter.</p>
+      <div class="p-6 md:p-12">
+        <h2 class="font-serif text-xl text-white font-medium text-center md:text-left">Get diet and fitness tips in your inbox</h2>
+        <p class="max-w-s font-sans text-xs text-white my-4 leading-5 tracking-wide text-center md:text-left">Eat better and exercise better. Sign up for the Diet&Fitness newsletter.</p>
   
-      <form action="">
-        <fieldset>
-          <label for="email">Enter your email address</label>
-          <input type="text" id="email" />
-        </fieldset>
-        <button>Subscribe</button>
-      </form>
+        <form action="">
+          <fieldset>
+            <label for="email">Enter your email address</label>
+            <input type="text" id="email" />
+          </fieldset>
+          <button>Subscribe</button>
+        </form>
+      </div>
     </div>
   </div>
 </div>
