--- a/email-subscribe/index.html
+++ b/email-subscribe/index.html
@@ -20,14 +20,12 @@
       <div class="p-6 md:p-12">
         <h2 class="font-serif text-xl text-white font-medium text-center md:text-left">Get diet and fitness tips in your inbox</h2>
         <p class="max-w-s font-sans text-xs text-white my-4 leading-5 tracking-wide text-center md:text-left">Eat better and exercise better. Sign up for the Diet&Fitness newsletter.</p>
-  
-        <form action="">
-          <fieldset>
-            <label for="email">Enter your email address</label>
-            <input type="text" id="email" />
-          </fieldset>
-          <button>Subscribe</button>
-        </form>
+        <div class="flex flex-col mt-5 space-y-4 md:space-x-3 md:flex-row md:space-y-0">
+          <form action="">
+            <input type="text" placeholder="Enter your email address" class="p-2 px-4 text-center text-white bg-zinc-800 border border-zinc-600 rounded-lg placeholder:text-xs placeholder:md:text-left focus:outline-none" />
+            <button>Subscribe</button>
+          </form>
+        </div>
       </div>
     </div>
   </div>
