--- a/email-subscribe/index.html
+++ b/email-subscribe/index.html
@@ -23,7 +23,7 @@
         <div class="flex flex-col mt-5 space-y-4 md:space-x-3 md:flex-row md:space-y-0">
           <form action="">
             <input type="text" placeholder="Enter your email address" class="p-2 px-4 text-center text-white bg-zinc-800 border border-zinc-600 rounded-lg placeholder:text-xs placeholder:md:text-left focus:outline-none" />
-            <button>Subscribe</button>
+            <button class="ml-3 px-5 py-3 text-xs rounded-md text-zinc-800 bg-lime-500 hover:bg-lime-700 hover:text-white duration-500">Subscribe</button>
           </form>
         </div>
       </div>
