--- a/pricing-grids/index.html
+++ b/pricing-grids/index.html
@@ -9,8 +9,53 @@
 </head>
 <body>
 <!-- Background Container -->
-<div class="flex items-center justify-center h-screen bg-slate-700">
-
+<div class="flex items-center justify-center h-screen bg-slate-800">
+  <div class="flex flex-col md:flex-row text-white">
+    <!-- Basic -->
+    <div class="flex flex-col items-center bg-slate-600 rounded-xl p-2 m-2">
+      <div class="flex flex-col items-center bg-slate-800 rounded-t-xl p-7 pb-2 w-full">
+        <h3 class="font-sans uppercase">Basic</h3>
+        <h2 class="font-serif text-5xl mt-10 mb-5">100GB</h2>
+        <p class="mb-5">$1.99/month</p>
+        <button class="text-center py-3 px-10 rounded-md text-xs bg-slate-800 border border-purple-500 mb-10">Purchase</button>
+      </div>
+      <ul class="pt-5 text-center border-t-2 border-slate-600 bg-slate-800 rounded-b-xl p-7 w-full">
+        <li class="my-2">100 GB storage</li>
+        <li class="my-2">Option to add members</li>
+        <li class="my-2">Extra member benefits</li>
+      </ul>
+    </div>
+    
+    <!-- Standard -->
+    <div class="flex flex-col items-center bg-purple-500 rounded-xl p-2 m-2">
+      <div class="flex flex-col items-center bg-slate-800 rounded-t-xl p-7 pb-2 w-full">
+        <h3 class="font-sans uppercase">Standard</h3>
+        <h2 class="font-serif text-5xl mt-10 mb-5">200GB</h2>
+        <p class="mb-5">$3.99/month</p>
+        <button class="text-center py-3 px-10 rounded-md text-xs bg-purple-500 border border-purple-500 mb-10">Purchase</button>
+      </div>
+      <ul class="pt-5 text-center border-t-2 border-slate-600 bg-slate-800 rounded-b-xl p-7 w-full">
+        <li class="my-2">200 GB storage</li>
+        <li class="my-2">Option to add members</li>
+        <li class="my-2">Extra member benefits</li>
+      </ul>
+    </div>
+    
+    <!-- Premium -->
+    <div class="flex flex-col items-center bg-slate-600 rounded-xl p-2 m-2">
+      <div class="flex flex-col items-center bg-slate-800 rounded-t-xl p-7 pb-2 w-full">
+        <h3 class="font-sans uppercase">Premium</h3>
+        <h2 class="font-serif text-5xl mt-10 mb-5">2TB</h2>
+        <p class="mb-5">$8.99/month</p>
+        <button class="text-center py-3 px-10 rounded-md text-xs bg-slate-800 border border-purple-500 mb-10">Purchase</button>
+      </div>
+      <ul class="pt-5 text-center border-t-2 border-slate-600 bg-slate-800 rounded-b-xl p-7 w-full">
+        <li class="my-2">2 TB storage</li>
+        <li class="my-2">Option to add members</li>
+        <li class="my-2">Extra member benefits</li>
+      </ul>
+    </div>
+  </div>
 
 </div>
 </body>
