Added SVG shapes to each list items.

--- a/pricing-grids/index.html
+++ b/pricing-grids/index.html
@@ -17,12 +17,54 @@
         <h3 class="font-sans uppercase">Basic</h3>
         <h2 class="font-serif text-5xl mt-10 mb-5">100GB</h2>
         <p class="mb-5">$1.99/month</p>
-        <button class="text-center py-3 px-10 rounded-md text-xs bg-slate-800 border border-purple-500 mb-10">Purchase</button>
+        <button class="text-center py-3 px-10 rounded-md text-xs bg-slate-800 border border-purple-500 mb-10 hover:bg-purple-500 duration-200">Purchase</button>
       </div>
       <ul class="pt-5 text-center border-t-2 border-slate-600 bg-slate-800 rounded-b-xl p-7 w-full">
-        <li class="my-2">100 GB storage</li>
-        <li class="my-2">Option to add members</li>
-        <li class="my-2">Extra member benefits</li>
+        <li class="my-2 flex justify-center">
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            class="w-5 h-5 mr-2"
+            viewBox="0 0 24 24"
+            stroke-width="2"
+            stroke="currentColor"
+            fill="none"
+            stroke-linecap="round"
+            stroke-linejoin="round"
+          >
+            <path stroke="none" d="M0 0h24v24H0z" fill="none" />
+            <path d="M5 12l5 5l10 -10" />
+          </svg>
+          100 GB storage</li>
+        <li class="my-2 flex justify-center">
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            class="w-5 h-5 mr-2"
+            viewBox="0 0 24 24"
+            stroke-width="2"
+            stroke="currentColor"
+            fill="none"
+            stroke-linecap="round"
+            stroke-linejoin="round"
+          >
+            <path stroke="none" d="M0 0h24v24H0z" fill="none" />
+            <path d="M5 12l5 5l10 -10" />
+          </svg>
+          Option to add members</li>
+        <li class="my-2 flex justify-center">
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            class="w-5 h-5 mr-2"
+            viewBox="0 0 24 24"
+            stroke-width="2"
+            stroke="currentColor"
+            fill="none"
+            stroke-linecap="round"
+            stroke-linejoin="round"
+          >
+            <path stroke="none" d="M0 0h24v24H0z" fill="none" />
+            <path d="M5 12l5 5l10 -10" />
+          </svg>
+          Extra member benefits</li>
       </ul>
     </div>
     
@@ -35,9 +77,51 @@
         <button class="text-center py-3 px-10 rounded-md text-xs bg-purple-500 border border-purple-500 mb-10">Purchase</button>
       </div>
       <ul class="pt-5 text-center border-t-2 border-slate-600 bg-slate-800 rounded-b-xl p-7 w-full">
-        <li class="my-2">200 GB storage</li>
-        <li class="my-2">Option to add members</li>
-        <li class="my-2">Extra member benefits</li>
+        <li class="my-2 flex justify-center">
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            class="w-5 h-5 mr-2"
+            viewBox="0 0 24 24"
+            stroke-width="2"
+            stroke="currentColor"
+            fill="none"
+            stroke-linecap="round"
+            stroke-linejoin="round"
+          >
+            <path stroke="none" d="M0 0h24v24H0z" fill="none" />
+            <path d="M5 12l5 5l10 -10" />
+          </svg>
+          200 GB storage</li>
+        <li class="my-2 flex justify-center">
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            class="w-5 h-5 mr-2"
+            viewBox="0 0 24 24"
+            stroke-width="2"
+            stroke="currentColor"
+            fill="none"
+            stroke-linecap="round"
+            stroke-linejoin="round"
+          >
+            <path stroke="none" d="M0 0h24v24H0z" fill="none" />
+            <path d="M5 12l5 5l10 -10" />
+          </svg>
+          Option to add members</li>
+        <li class="my-2 flex justify-center">
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            class="w-5 h-5 mr-2"
+            viewBox="0 0 24 24"
+            stroke-width="2"
+            stroke="currentColor"
+            fill="none"
+            stroke-linecap="round"
+            stroke-linejoin="round"
+          >
+            <path stroke="none" d="M0 0h24v24H0z" fill="none" />
+            <path d="M5 12l5 5l10 -10" />
+          </svg>
+          Extra member benefits</li>
       </ul>
     </div>
     
@@ -47,12 +131,54 @@
         <h3 class="font-sans uppercase">Premium</h3>
         <h2 class="font-serif text-5xl mt-10 mb-5">2TB</h2>
         <p class="mb-5">$8.99/month</p>
-        <button class="text-center py-3 px-10 rounded-md text-xs bg-slate-800 border border-purple-500 mb-10">Purchase</button>
+        <button class="text-center py-3 px-10 rounded-md text-xs bg-slate-800 border border-purple-500 mb-10 hover:bg-purple-500 duration-200">Purchase</button>
       </div>
       <ul class="pt-5 text-center border-t-2 border-slate-600 bg-slate-800 rounded-b-xl p-7 w-full">
-        <li class="my-2">2 TB storage</li>
-        <li class="my-2">Option to add members</li>
-        <li class="my-2">Extra member benefits</li>
+        <li class="my-2 flex justify-center">
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            class="w-5 h-5 mr-2"
+            viewBox="0 0 24 24"
+            stroke-width="2"
+            stroke="currentColor"
+            fill="none"
+            stroke-linecap="round"
+            stroke-linejoin="round"
+          >
+            <path stroke="none" d="M0 0h24v24H0z" fill="none" />
+            <path d="M5 12l5 5l10 -10" />
+          </svg>
+          2 TB storage</li>
+        <li class="my-2 flex justify-center">
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            class="w-5 h-5 mr-2"
+            viewBox="0 0 24 24"
+            stroke-width="2"
+            stroke="currentColor"
+            fill="none"
+            stroke-linecap="round"
+            stroke-linejoin="round"
+          >
+            <path stroke="none" d="M0 0h24v24H0z" fill="none" />
+            <path d="M5 12l5 5l10 -10" />
+          </svg>
+          Option to add members</li>
+        <li class="my-2 flex justify-center">
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            class="w-5 h-5 mr-2"
+            viewBox="0 0 24 24"
+            stroke-width="2"
+            stroke="currentColor"
+            fill="none"
+            stroke-linecap="round"
+            stroke-linejoin="round"
+          >
+            <path stroke="none" d="M0 0h24v24H0z" fill="none" />
+            <path d="M5 12l5 5l10 -10" />
+          </svg>
+          Extra member benefits</li>
       </ul>
     </div>
   </div>
